# ekai

./: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  seed-data.js  server.js
app/: generator.py  main.py
blog/: key-risk-indicators-examples-for-manufacturing-companies.md  key-risk-indicators-examples-manufacturing-companies.md  operational-risk-key-risk-indicators-examples.md
blog-posts/: key-risk-indicators-examples-for-manufacturing-companies.md  operational-risk-key-risk-indicators-examples.md
client/: package-lock.json  package.json
context/: brand-voice.md  internal-links-map.md  style-guide.md
docs/: ERM POLICY 2025 REVIEWED.txt  KPLC - BCCM Frameworkv0.2.txt
drafts/: optimization-report-crisis-communication-plan-template-2026-05-07.md
llc_domicile_app/: __init__.py  cli.py  comparator.py  data.py
middleware/: auth.js
models/: Assessment.js  Plan.js  Template.js  User.js
policies/: base.yml
research/: brief-liquidity-risk-key-risk-indicators-examples-2026-05-04.md  cluster-strategy-crisis-communication-plan-2026-05-07.md
rewrites/: changes-crisis-communication-plan-template-2026-05-07.md  crisis-communication-plan-template-rewrite-2026-05-07.docx  crisis-communication-plan-template-rewrite-2026-05-07.docx.base64.txt  crisis-communication-plan-template-rewrite-2026-05-07.html  crisis-communication-plan-template-rewrite-2026-05-07.md
routes/: assessments.js  auth.js  documents.js  industries.js  plans.js  templates.js
static/: styles.css
templates/: index.html  policy.html
(+29 files in other folders)
