[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llc-domicile-app"
version = "0.1.0"
description = "CLI to compare LLC domicile considerations in East African jurisdictions"
readme = "README.md"
authors = [{ name = "ekai" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["llc_domicile_app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
